<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help" >

    
    <LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_help"
        android:text="@string/intro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/createHelpTitle"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_phrase"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/createHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_help"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/editHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:text="@string/edit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/editHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_help"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/deleteHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_delete"
        android:text="@string/delete"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/deleteHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_help"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/emailHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_send"
        android:text="@string/email_help_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/emailHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_help_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>
</ScrollView>
