<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateNewPhrase" >

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/enter_cat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteCat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/cat"
        android:inputType="textCapSentences" >
        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/textPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="30dp"
        android:text="@string/enter_phrase"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/insertPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phrase"
        android:inputType="textMultiLine|textCapSentences" />
    
	    <Button
	        android:id="@+id/send1"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/create"
	        android:onClick="sendCreatePhrase"
	        android:textColor="@android:color/black"
	        android:text="@string/send" />
	
</LinearLayout>