<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="?android:attr/buttonBarStyle"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp" >

        <Button
            android:id="@+id/remove"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="removePhrase"
            android:background="@drawable/remove"
            android:text="@string/remove_phrase"
            android:textColor="@android:color/black" />
        
        <Button
            android:id="@+id/edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:onClick="editPhrase"
            android:text="@string/edit_phrase"
            android:background="@drawable/edit"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/create_phrase"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/create_phrase"
            android:background="@drawable/create"
            android:textColor="@android:color/black"
            android:onClick="createPhrase" />

    </LinearLayout>

	<ListView
        android:id="@android:id/list"
        android:layout_width="0dp"
        android:layout_height="0dp" />
    
    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </ListView>

</LinearLayout>